fix: make icon visibility configurable

--- a/projects/component-tester/src/app/alert-example/alert-example.component.scss
+++ b/projects/component-tester/src/app/alert-example/alert-example.component.scss
@@ -38,6 +38,12 @@
       label {
         font-size: 12px;
         line-height: 14px;
+
+        &.radio {
+          font-size: 11px;
+          line-height: 11px;
+          font-weight: 500;
+        }
       }
 
       input[type=text] {
@@ -49,7 +55,7 @@
       }
 
       input[type=radio] {
-        margin: 0px 20px;
+        margin: 8px 20px;
       }
     }
   }
@@ -59,7 +65,8 @@
 
     .code {
       margin-top: 16px;
-      background-color: #eeeeee;
+      background-color: #f5f5f5;
+      // border: 1px solid orange;
       box-shadow: 3px 3px #dddddd;
       position: relative;
       top: 0;
